<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">广尧-航电</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="title_home">首页</string>
    <string name="title_info">资讯</string>
    <string name="title_exhi">会展</string>
    <string name="title_msg">留言</string>
    <string name="title_about">关于我们</string>
    <string name="user_name">用户名</string>
    <string name="user_info">个人信息</string>
    <string name="sign_out">注销登陆</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="action_settings">Settings</string>
    <string name="exit_again">再按一次退出</string>
    <string name="test_name">用户ABC</string>
    <string name="test_msg_content">第十届中国国际航空航天博览会11月16日顺利闭幕，从战斗机到无人机</string>
    <string name="no_media_warning">Storage Media not present</string>
    <string name="no_media_hint">Sharing the storage media with a PC can make it inaccessible</string>
    <string name="open_failed">Unable to open document</string>
    <string name="cancel">Cancel</string>
    <string name="search_backwards">Search backwards</string>
    <string name="search_forwards">Search forwards</string>
    <string name="search_document">Search document</string>
    <string name="picker_title">MuPDF</string>
    <string name="outline_title">Table of Contents</string>
    <string name="enter_password">Enter Password</string>
    <string name="text_not_found">Text not found</string>
    <string name="searching_">Searching...</string>
    <string name="link_control">Link highlighting and enabling</string>
    <string name="company_name">上海广尧商务咨询有限公司</string>
    <string name="company_introduce">上海广尧商务咨询有限公司，作为中国航空学会国际航空产业会议的独家合作伙伴以及中国商飞《大飞机》杂志社的独家战略伙伴，是目前国内唯一一家全方位提供航空产业咨询与服务的公司。</string>
    <string name="contact">联系人：Adeson XING</string>
    <string name="tel">电话：86 21-51559030</string>
    <string name="phone">手机：86-18621768883</string>
    <string name="email">邮箱：adesonx@galleon.cc</string>

    <string name="title_exhi_intro">会展介绍</string>
    <string name="title_exhi_trans">交通住宿</string>
    <string name="title_exhi_agenda">会议日程</string>
    <string name="title_exhi_sponsor">组委会</string>
    <string name="title_exhi_layout">会展布局</string>
    <string name="title_exhi_report">相关资料下载</string>
        
    <string name="not_connection">未连接网络</string>
    <string name="login_as_visitor">以游客身份登录</string>
    <string name="have_no_access_right">没有访问权限，请联系管理员</string>
    <string name="company_title">公司</string>
    <string name="visitor">游客(点击登录)</string>
    <string name="title_discuss">讨论区</string>

    <string name="notice">通告</string>
    <string name="headline">新闻头条</string>
    <string name="edit_profile">修改用户信息</string>
    <string name="msg_submit">提交</string>
    <string name="login">登陆</string>
    <string name="visitor_login">游客登录</string>
    <string name="auto_login">下次自动登陆</string>
    <string name="password">密码</string>
    <string name="input_password">请在此输入您的密码</string>
    <string name="id">账号</string>
    <string name="input_id">请在此输入您的账号</string>
    <string name="real_name">实名</string>
    <string name="btn_cancel">取消</string>
    <string name="btn_ok">确定</string>

    <string name="toast_request_fail">获取信息失败</string>
    <string name="toast_leave_message_success">提交成功</string>
    <string name="toast_leave_message_fail">提交留言失败</string>
    <string name="title_message_create">撰写留言</string>
    <string name="toast_leave_message_empty">留言不能为空</string>
    <string name="toast_login_success">登录成功</string>
    <string name="toast_login_fail">登录失败</string>
    <string name="toast_user_changed_fail">信息修改失败</string>
    <string name="title_user_info">用户信息</string>

</resources>