<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@drawable/bg_about_us"
    android:orientation="vertical" >

    <include layout="@layout/main_title_bar" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="14dp"
        android:text="@string/company_name"
        android:textColor="#ffffff"
        android:textSize="25sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:alpha="153"
        android:text="@string/company_introduce"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="fill_parent"
        android:layout_height="3dp"
        android:layout_marginTop="14dp"
        android:background="@drawable/div" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:alpha="60"
        android:text="@string/contact"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:alpha="30"
        android:text="@string/tel"
        android:textColor="#ffffff"
        android:textSize="20sp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:alpha="30"
        android:text="@string/email"
        android:textColor="#ffffff"
        android:textSize="20sp" />

</LinearLayout>