<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_login"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center_vertical"
        android:gravity="center_vertical"
        android:orientation="vertical" >

        <ImageView
            android:layout_width="113dp"
            android:layout_height="36dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="80dp"
            android:background="@drawable/pic_logo" />

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="50dp" >

            <EditText
                android:id="@+id/etUserID"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:alpha="0.85"
                android:background="@drawable/selector_input_box"
                android:gravity="center_vertical"
                android:hint="@string/input_id"
                android:inputType="text"
                android:paddingLeft="74dp"
                android:textColor="#ffffff"
                android:textCursorDrawable="@drawable/ic_input_box_cursor"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="23dp"
                android:alpha="0.6"
                android:gravity="center_vertical"
                android:text="@string/id"
                android:textColor="#ffffff"
                android:textSize="16sp" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="15dp" >

            <EditText
                android:id="@+id/etPassword"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:alpha="0.85"
                android:background="@drawable/selector_input_box"
                android:gravity="center_vertical"
                android:hint="@string/input_password"
                android:inputType="textPassword"
                android:paddingLeft="74dp"
                android:textColor="#ffffff"
                android:textCursorDrawable="@drawable/ic_input_box_cursor"
                android:textSize="14sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="23dp"
                android:alpha="0.6"
                android:gravity="center_vertical"
                android:text="@string/password"
                android:textColor="#ffffff"
                android:textSize="16sp" />

            <ToggleButton
                android:id="@+id/tgbtnShowPwd"
                android:layout_width="27dp"
                android:layout_height="27dp"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"
                android:layout_marginRight="17dp"
                android:background="@drawable/ic_input_box_invisible"
                android:textOff=""
                android:textOn="" />
        </RelativeLayout>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="27dp"
            android:layout_marginTop="28dp"
            android:orientation="horizontal" >

            <ToggleButton
                android:id="@+id/tgbtnSavePwd"
                android:layout_width="27dp"
                android:layout_height="fill_parent"
                android:layout_marginLeft="55dp"
                android:background="@drawable/ic_checked_normal"
                android:textOff=""
                android:textOn="" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginLeft="5dp"
                android:alpha="0.6"
                android:gravity="center_vertical"
                android:text="@string/auto_login"
                android:textColor="#ffffff"
                android:textSize="12sp" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp" >

            <Button
                android:id="@+id/btnLogin"
                android:layout_width="120dp"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:alpha="0.85"
                android:background="@drawable/selector_button"
                android:text="@string/login"
                android:textColor="#ffffff"
                android:textSize="18sp" />
            
            <TextView 
                android:id="@+id/visitorLogin"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/btnLogin"
                android:layout_marginLeft="10dp"
                android:alpha="0.6"
                android:textSize="14sp"
                android:textColor="#ffffff"
                android:text="@string/visitor_login" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>