<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <include layout="@layout/main_title_bar" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/exhiIntro"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/pic_1huiyijieshao" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="26dp"
                android:text="@string/title_exhi_intro"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/exhiTrans"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/pic_2jiaotongzhusu" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="26dp"
                android:text="@string/title_exhi_trans"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/exhiSponsor"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/pic_3zuweihui" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="26dp"
                android:text="@string/title_exhi_sponsor"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/exhiAgenda"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/pic_4huiyiricheng" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="26dp"
                android:text="@string/title_exhi_agenda"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/exhiLayout"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/pic_5huichangbuju" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="26dp"
                android:text="@string/title_exhi_layout"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </RelativeLayout>

        <ImageView
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:background="#000000" />

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1" >

            <ImageView
                android:id="@+id/exhiReport"
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:background="@drawable/pic_6lijiehuiyibaogao" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="10dp"
                android:layout_marginRight="26dp"
                android:text="@string/title_exhi_report"
                android:textColor="#ffffff"
                android:textSize="20sp" />
        </RelativeLayout>
    </LinearLayout>

</LinearLayout>